# Remote-computer-control

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
ClientProgram/: main.py
Django_course_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
chat/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_computer_nickname_room_message.py  0003_computer_channel_name.py  0004_rename_context_message_text.py  0005_alter_message_sender_computer_and_more.py
command/: admin.py  forms.py  models.py  urls.py  views.py
command/migrations/: 0001_initial.py  0002_alter_command_author.py  0003_alter_command_examples_alter_command_name.py  0004_alter_command_examples.py  0005_alter_command_examples.py  0006_alter_command_examples.py  0007_alter_command_examples.py  0008_remove_command_parameters_command_parent_parameter.py  0009_remove_parameter_command_command_parameters.py  0010_alter_command_parameters.py  0011_remove_command_parameters_parameter_command.py  0012_alter_command_options.py  (+4 more)
computer/: admin.py  apps.py  forms.py  models.py  urls.py
computer_api/: apps.py  serializers.py  urls.py  views.py
event/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
ssl_certificate/: server.crt  server.key
templates/: base.html  base_card.html  base_confirm_delete.html  home.html
user/: forms.py  models.py  urls.py  views.py
video/: models.py  urls.py  views.py
(+68 files in other folders)
