[project]
name = "django-course-project"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django>=5.2",
    "utils>=1.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-debug-toolbar>=5.2.0",
    "flake8>=7.2.0",
]
