[project]
name = "django-course-project"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "utils>=1.0.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
]
