[project]
name = "django-course-project"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.9",
    "beautifulsoup4>=4.13.4",
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "crispy-bootstrap5>=2025.4",
    "django>=5.2",
    "django-crispy-forms>=2.4",
    "djangorestframework>=3.16.0",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "utils>=1.0.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
]
